# sourcegraph

./: .bazelrc  .dockerignore  .gitignore  .syncpackrc  .tool-versions  BUILD.bazel  README.md  WORKSPACE  deps.bzl  go.mod  go.sum  jest.config.base.js  lighthouserc.js  package.json  pnpm-lock.yaml  sg.config.yaml  tsconfig.bazel.json  tsconfig.json
.aspect/cli/: plugins.yaml
.aspect/rules/external_repository_action_cache/: npm_translate_lock_LTE4Nzc1MDcwNjU=
.aspect/workflows/: config.yaml
.github/workflows/: scip-typescript.yml
client/: tools.bzl
client/branded/: package.json
client/branded/src/: BUILD.bazel
client/browser/: .browserslistrc  .gitignore  README.md  gulpfile.js  package.json
client/browser/scripts/: build-ff.sh  create-source-zip.js  release-firefox.sh
client/build-config/: BUILD.bazel  package.json
client/client-api/: package.json
client/codeintellify/: package.json
client/common/: BUILD.bazel  package.json
client/extension-api/: package.json
client/extension-api-types/: package.json
client/http-client/: package.json
client/jetbrains/: BUILD.bazel  README.md  package.json
client/jetbrains/scripts/: release.sh
client/jetbrains/webview/: BUILD.bazel
client/jetbrains/webview/src/: BUILD.bazel
client/observability-client/: package.json
client/observability-server/: package.json
client/observability-server/src/webBundleSize/: index.ts
client/search/: BUILD.bazel  package.json
client/search-ui/: BUILD.bazel  package.json
client/search-ui/src/: BUILD.bazel
client/search-ui/src/input/: SearchHistoryDropdown.tsx
client/search-ui/src/results/: StreamingSearchResultsList.tsx
client/search-ui/src/results/progress/: StreamingProgressSkippedPopover.tsx
client/search-ui/src/results/sidebar/: FilterLink.tsx
client/shared/: BUILD.bazel  generateGraphQlSchema.js  package.json
client/shared/dev/: BUILD.bazel  defaults.bzl  generateGraphQlOperations.js  generate_graphql_operations.bzl  tools.bzl
client/shared/src/: BUILD.bazel  keyboardShortcuts.ts
client/shared/src/codeintel/legacy-extensions/: api.ts
client/shared/src/commandPalette/: CommandList.tsx
client/shared/src/components/: MonacoEditor.tsx
client/shared/src/schema/: generateSchema.js
client/shared/src/testing/: driver.ts
client/shared/src/util/: globbing.ts
client/storybook/: BUILD.bazel  package.json
client/template-parser/: package.json
client/vscode/: .vscodeignore  CONTRIBUTING.md  package.json
client/vscode/scripts/: publish.ts
client/web/: BUILD.bazel  package.json  webpack.config.js
client/web/src/: BUILD.bazel
client/web/src/codeintel/: ReferencesPanel.story.tsx
client/web/src/global/: GlobalAlert.story.tsx
client/web/src/regression/: README.md
client/web/src/repo/: RepoHeader.story.tsx
client/web/src/site-admin/SiteAdminAllUsersPage/UserManagement/components/: DateRangeSelect.story.tsx
client/wildcard/: BUILD.bazel  package.json
client/wildcard/src/: BUILD.bazel
cmd/frontend/: pre-build.sh
cmd/frontend/backend/: BUILD.bazel
cmd/frontend/graphqlbackend/: BUILD.bazel
cmd/frontend/internal/app/: BUILD.bazel
cmd/frontend/internal/cli/: BUILD.bazel
cmd/frontend/webhooks/: BUILD.bazel
cmd/gitserver/server/: BUILD.bazel
cmd/repo-updater/repoupdater/: BUILD.bazel
cmd/server/shared/: BUILD.bazel
cmd/symbols/squirrel/test_repos/starlark/: WORKSPACE  bzl_library.bzl  sample.bzl
dev/: defs.bzl  sass.bzl
dev/check/: yarn-deduplicate.sh
dev/ci/: pnpm-build.sh  pnpm-run.sh  pnpm-test-separate.sh  pnpm-test.sh  pnpm-web-integration.sh  render-pr-preview.sh  report-bundle-diff.sh
dev/ci/integration/: README.md
dev/ci/integration/cluster/: test.sh
dev/ci/integration/e2e/: test.sh
dev/ci/integration/qa/: test.sh
dev/ci/integration/upgrade/: test.sh
dev/phabricator/: e2e.sh
dev/release/: README.md  package.json  release-config.jsonc
dev/release/src/: release.ts
dev/sg/: sg.config.example.yaml
dev/sg/internal/check/: BUILD.bazel  check_test.go
dev/sg/linters/: linters.go
doc/batch_changes/references/: batch_spec_yaml_reference.md
doc/code_navigation/explanations/diagrams/: generate.sh
doc/dev/background-information/ci/: development.md
doc/dev/background-information/codeintel/diagrams/: generate.sh
doc/dev/background-information/web/: web_app.md
doc/dev/contributing/: frontend_contribution.md
doc/dev/how-to/: ci_soft_failure_and_still_notify.md  client_pr_previews.md  testing.md
enterprise/: .gitignore
enterprise/cmd/frontend/internal/auth/azureoauth/: BUILD.bazel
enterprise/cmd/repo-updater/internal/authz/: BUILD.bazel
enterprise/dev/ci/internal/ci/: operations.go
enterprise/dev/ci/internal/ci/changed/: diff.go
enterprise/dev/ci/scripts/app-token/: BUILD.bazel
enterprise/internal/authz/perforce/: BUILD.bazel
enterprise/internal/authz/perforce/testdata/: BUILD.bazel
enterprise/internal/batches/processor/: BUILD.bazel
enterprise/internal/batches/reconciler/: BUILD.bazel
enterprise/internal/batches/service/: BUILD.bazel
enterprise/internal/batches/store/: BUILD.bazel
enterprise/internal/codemonitors/background/: BUILD.bazel
enterprise/internal/database/: BUILD.bazel
enterprise/internal/insights/background/: BUILD.bazel
enterprise/internal/insights/background/retention/: BUILD.bazel
enterprise/internal/insights/scheduler/: BUILD.bazel
enterprise/internal/oobmigration/migrations/codeintel/: BUILD.bazel
enterprise/internal/oobmigration/migrations/iam/: BUILD.bazel
internal/codeintel/dependencies/internal/store/: BUILD.bazel
internal/database/: BUILD.bazel
internal/gitserver/: BUILD.bazel
internal/gitserver/integration_tests/: BUILD.bazel
internal/gitserver/v1/: BUILD.bazel
internal/oobmigration/: BUILD.bazel
internal/own/codeowners/v1/: BUILD.bazel
internal/repos/: BUILD.bazel
internal/search/repos/: BUILD.bazel
internal/search/searcher/: BUILD.bazel
internal/searcher/v1/: BUILD.bazel
internal/service/servegit/: BUILD.bazel
internal/symbols/v1/: BUILD.bazel
internal/usagestats/: BUILD.bazel
migrations/: BUILD.bazel
(+10 files in other folders)
