load("//client/shared/dev:defaults.bzl", "ts_config", "ts_project")

ts_config(
    name = "tsconfig",
    src = "tsconfig.json",
)

ts_project(
    name = "common",
    srcs = glob(
        [
            "*.ts",
            "src/**/*",
        ],
        [
            "**/*.test.ts",
        ],
    ),
    tsconfig = ":tsconfig",
    deps = [
        "//:node_modules/@sourcegraph/extension-api-types",
        "//:node_modules/@types/highlight.js",
        "//:node_modules/@types/lodash",
        "//:node_modules/@types/marked",
        "//:node_modules/@types/node",
        "//:node_modules/@types/sanitize-html",
        "//:node_modules/highlight.js",
        "//:node_modules/jsonc-parser",
        "//:node_modules/lodash",
        "//:node_modules/marked",
        "//:node_modules/rxjs",
        "//:node_modules/sanitize-html",
        "//:node_modules/tslib",
        "//:node_modules/utility-types",
    ],
)
