load("//client/shared/dev:generate_graphql_operations.bzl", "generate_graphql_operations")

generate_graphql_operations(
    name = "graphql_operations",
    srcs = [
        "//client/jetbrains/webview:graphql_operations_files",
    ],
    interface_name = "JetBrainsGraphQlOperations",
    output = "src/graphql-operations.ts",
)
