load("//client/shared/dev:generate_graphql_operations.bzl", "generate_graphql_operations")
load("@aspect_rules_js//js:defs.bzl", "js_library")

js_library(
    name = "graphql_operations_files",
    # Keep in sync with glob in client/shared/dev/generateGraphQlOperations.js
    srcs = glob(
        [
            "src/**/*.ts",
            "src/**/*.tsx",
        ],
    ),
)

generate_graphql_operations(
    name = "graphql_operations",
    srcs = [
        ":graphql_operations_files",
    ],
    interface_name = "SearchGraphQlOperations",
    output = "src/graphql-operations.ts",
)
