load("@aspect_rules_js//js:defs.bzl", "js_library")
load("//client:tools.bzl", "module_style_typings")

module_style_typings(deps = [
    ":wildcard",
    "//:node_modules/@reach/dialog",
    "//:node_modules/@reach/tabs",
])

js_library(
    name = "wildcard",
    srcs = glob(["src/**/*.scss"]),
    visibility = ["//client:__subpackages__"],
)
