load("@aspect_rules_js//js:defs.bzl", "js_binary", "js_library", "js_run_binary")
load("//client:tools.bzl", "module_style_typings")

module_style_typings()

js_library(
    name = "src",
    srcs = glob([
        "**/*",
    ]) + [
        ":graphql_schema",
    ],
)

js_library(
    name = "graphql_operations_files",
    # Keep in sync with glob in client/shared/dev/generateGraphQlOperations.js
    srcs = glob(
        [
            "**/*.ts",
            "**/*.tsx",
        ],
        [
            "testing/**/*.*",
            "schema.ts",
        ],
    ),
    visibility = ["//client/shared:__pkg__"],
)

js_binary(
    name = "generate_graphql_schema",
    data = [
        "//:node_modules/@gql2ts/from-schema",
        "//:node_modules/@gql2ts/language-typescript",
        "//:node_modules/glob",
        "//:node_modules/graphql",
        "//:node_modules/mz",
        "//:node_modules/prettier",
        "//:prettier_config_js",
        "//cmd/frontend/graphqlbackend:graphql_schema",
    ],
    entry_point = "generateGraphQlSchema.js",
)

js_run_binary(
    name = "graphql_schema",
    outs = ["schema.ts"],
    args = [
        "schema.ts",
    ],
    chdir = package_name(),
    tool = ":generate_graphql_schema",
)
