load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
load("@rules_buf//buf:defs.bzl", "buf_lint_test")

proto_library(
    name = "proto_proto",
    srcs = ["gitserver.proto"],
    visibility = ["//:__subpackages__"],
    deps = ["@com_google_protobuf//:timestamp_proto"],
)

go_proto_library(
    name = "v1_go_proto",
    compilers = [
        "//:gen-go-grpc",
        "@io_bazel_rules_go//proto:go_proto",
    ],
    importpath = "github.com/sourcegraph/sourcegraph/internal/gitserver/v1",
    proto = ":proto_proto",
    visibility = ["//:__subpackages__"],
)

go_library(
    name = "gitserver",
    embed = [":v1_go_proto"],
    importpath = "github.com/sourcegraph/sourcegraph/internal/gitserver/v1",
    visibility = ["//:__subpackages__"],
)

buf_lint_test(
    name = "v1_proto_lint",
    # ==================== Test output for //internal/gitserver/v1:v1_proto_lint:
    # --buf-plugin_out: internal/gitserver/v1/gitserver.proto:1:1:Enum value name "AND" should be prefixed with "OPERATOR_KIND_".
    # TODO(bazel): fix test
    tags = ["manual"],
    targets = [":proto_proto"],
)
