load("@rules_buf//buf:defs.bzl", "buf_lint_test")
load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

exports_files(["buf.gen.yaml"])

proto_library(
    name = "v1_proto",
    srcs = ["searcher.proto"],
    visibility = ["//visibility:public"],
    deps = ["@com_google_protobuf//:duration_proto"],
)

go_proto_library(
    name = "v1_go_proto",
    compilers = [
        "//:gen-go-grpc",
        "@io_bazel_rules_go//proto:go_proto",
    ],
    importpath = "github.com/sourcegraph/sourcegraph/internal/searcher/v1",
    proto = ":v1_proto",
    visibility = ["//:__subpackages__"],
)

go_library(
    name = "searcher",
    embed = [":v1_go_proto"],
    importpath = "github.com/sourcegraph/sourcegraph/internal/searcher/v1",
    visibility = ["//:__subpackages__"],
)

buf_lint_test(
    name = "v1_proto_lint",
    # ==================== Test output for //internal/searcher/v1:v1_proto_lint:
    # --buf-plugin_out: internal/searcher/v1/searcher.proto:1:1:Files with package "searcher.v1" must be within a directory "searcher/v1" relative to root but were in directory "internal/searcher/v1".
    # TODO(bazel): fix test
    tags = ["manual"],
    targets = [":v1_proto"],
)
